[package]
authors = ["Saghm Rossi <saghmrossi@gmail.com>", "Terry Sun <terrynsun@gmail.com>"]
build = "build.rs"
name = "jsrs-parser"
version = "0.1.0"

[build-dependencies]
lalrpop = "0.8.0"

[dependencies]
lalrpop-util = "0.8.0"
rustyline = "0.1.0"

[dependencies.jsrs-common]
git = "https://github.com/rustoscript/js.rs-common"
rev = "d55cad6"

[dev-dependencies]
nalgebra = "0.3.1"
