[package]
authors = ["Saghm Rossi <saghmrossi@gmail.com>", "Terry Sun <terrynsun@gmail.com>"]
build = "build.rs"
license = "MIT"
name = "jsrs-parser"
version = "0.1.0"

[build-dependencies]
lalrpop = "0.11.0"

[dependencies]
lalrpop-util = "0.11.0"
rustyline = "0.2.2"

[dependencies.jsrs-common]
git = "https://github.com/rustoscript/js.rs-common"

[dev-dependencies]
nalgebra = "0.3.2"
